# NOAA-Global-Data-Clean-Calculate-Visualize

./: .gitignore  LICENSE  README.md  aws_python_links.md  aws_upload.py  climate.countries.json  environment.yml  noaa_data_tables.sql  prefect_aws_data_prep.py  prefect_aws_upload.py  prefect_aws_upload.py.save  prefect_data_cleaning.py  prefect_data_cleaning_v2.py  prefect_db_csv_insert.py  prefect_files_download_all.py  prefect_files_download_all_ORION.py  prefect_files_download_year.py  presentation.md  pyproject.toml  requirements.txt  test.py
_dev_code/: aws_upload.py  climate_table.sql  explr_data_verify.ipynb  prefect_data_cleaning.py
_dev_code/python_scraps/: aws_scraps.py
